feat(image): support copy pasting images in markdown
